--- a/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-03|HTML-&-CSS-Seletores-e-Posicionamento/fixando/style4.css
+++ b/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-03|HTML-&-CSS-Seletores-e-Posicionamento/fixando/style4.css
@@ -1,3 +1,18 @@
-div {
-  border: 5px solid black;
+div:hover {
+  border: 1px solid black;
+}
+div:nth-of-type(1) {
+  background-color: red;
+}
+div:nth-of-type(2) {
+  background-color: orange;
+}
+div:nth-of-type(3) {
+  background-color: yellow;
+}
+div:nth-of-type(4) {
+  background-color: blue;
+}
+div:nth-of-type(5) {
+  background-color: burlywood;
 }
