--- a/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-03|HTML-&-CSS-Seletores-e-Posicionamento/fixando/style5.css
+++ b/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-03|HTML-&-CSS-Seletores-e-Posicionamento/fixando/style5.css
@@ -7,3 +7,12 @@ ol li:nth-child(even){
 ol li:nth-child(odd){
   text-transform: uppercase;
 }
+h1, h3{
+  color: red;
+}
+ 
+h1 em{
+  font-size: 40px;
+  border: 1px solid black;
+}
+}
