--- a/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-03|HTML-&-CSS-Seletores-e-Posicionamento/fixando/style5.css
+++ b/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-03|HTML-&-CSS-Seletores-e-Posicionamento/fixando/style5.css
@@ -7,6 +7,7 @@ ol li:nth-child(even){
 ol li:nth-child(odd){
   text-transform: uppercase;
 }
+
 h1, h3{
   color: red;
 }
@@ -20,4 +21,10 @@ li{
 }
 li em{
   font-weight: bold;
+}
+#li li:not(:nth-child(n + 4)) {
+  color: blue;
+}
+.java {
+  background-color: pink;
 }
