--- a/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-04|HTML-Semântico/fixando/style.css
+++ b/Bloco-01|FUNDAMENTOS/secao-02|Introdução-à-HTML-&CSS/dia-04|HTML-Semântico/fixando/style.css
@@ -1,20 +1,25 @@
 h1 {
   text-align: center;
 }
-
+ul{
+  list-style: none;
+}
+li{
+  text-align: center;
+}
 .first {
   background-color: rgb(235, 200, 84);
   font-size: 20px;
   height: 50px;
-  text-align: center;
   width: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .second {
   background-color: rgb(219, 219, 219);
   font-size: 20px;
   height: 50px;
-  text-align: center;
   width: 300px;
 }
 
@@ -22,6 +27,5 @@ h1 {
   background-color: rgb(170, 142, 106);
   font-size: 20px;
   height: 50px;
-  text-align: center;
   width: 300px;
 }
